--- a/app/src/main/res/layout/movie_image.xml
+++ b/app/src/main/res/layout/movie_image.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ImageView
+<RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:id="@+id/item_movieImage"
-        android:scaleType="fitXY"
-        android:background="#b2b2b2"
         android:layout_height="300dp">
-
-</ImageView>
+    <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_centerInParent="true"
+            android:id="@+id/item_movieImage"
+            android:scaleType="centerCrop"
+            android:background="#b2b2b2"/>
+</RelativeLayout>
