--- a/app/src/main/res/values/endpoints.xml
+++ b/app/src/main/res/values/endpoints.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="baseUrl">http://image.tmdb.org/t/p/w185/%1$s</string>
+    <string name="imageUrl">http://image.tmdb.org/t/p/w185%1$s</string>
+    <string name="fetchMovies">api.themoviedb.org</string>
 </resources>
