--- a/app/src/main/res/layout/movie_image.xml
+++ b/app/src/main/res/layout/movie_image.xml
@@ -9,5 +9,6 @@
             android:layout_centerInParent="true"
             android:id="@+id/item_movieImage"
             android:scaleType="centerCrop"
+            android:contentDescription="@string/imageMovie"
             android:background="#b2b2b2"/>
 </RelativeLayout>
